--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@mantine/notifications": "^7.6.2",
     "embla-carousel-react": "^8.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.24.0",
+    "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
